Total页面模块化，完成 Type 组件的CSS

--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -4,4 +4,4 @@ $font-kai : Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR P
 
 $bg : #353445;
 $color-highlight : #9fd26a;
-$color : #fdfcff;
+$color : #fefeff;
