基本完成 当前月 组件

--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -5,3 +5,7 @@ $font-kai : Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR P
 $bg : #353445;
 $color-highlight : #9fd26a;
 $color : #fefeff;
+
+$color-gray : #5c5b6b;
+$color-normal : #a1a0ad;
+$color-selected: #FFF;
