给周六周日添加样式

--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -9,3 +9,5 @@ $color : #fefeff;
 $color-gray : #5c5b6b;
 $color-normal : #a1a0ad;
 $color-selected: #FFF;
+$color-graygreen: #6a7a4e;
+$color-grayred: #8d4e59;
