--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -31,15 +31,6 @@
     min-width: 14.2857%;
     justify-content: space-between;
     flex-wrap: wrap;
-    > .month-class {
-      color: #a1a0ad;
-    }
-
-    > .todayBg {
-      background: #23222e;
-      border-radius: 50%;
-
-    }
     > span {
       height: 30px;
       min-width: 30px;
@@ -48,6 +39,22 @@
       color: #5c5b6b;
       text-align: center;
       line-height: 30px;
+      &:nth-child(7n).month-class{
+        color:$color-graygreen;
+      }
+      &:nth-child(7n-6).month-class{
+        color:$color-grayred;
+      }
+
+    }
+    > .month-class {
+      color: #a1a0ad;
+    }
+
+    > .todayBg {
+      background: #23222e;
+      border-radius: 50%;
+
     }
     &selected {
       border: 2px solid #6abfe0;
