--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -3,11 +3,17 @@ $font-song : Georgia, "Nimbus Roman No9 L", "Songti SC", "Noto Serif CJK SC", "S
 $font-kai : Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
 
 $bg : #353445;
-$color-highlight : #9fd26a;
+$navbg : #23222e;
+$color-greypurple : #a4789f;
+$color-lightgreen : #9fd26a;
+$color-lightred : #ea5e69;
 $color : #fefeff;
 
 $color-gray : #5c5b6b;
 $color-normal : #a1a0ad;
-$color-selected: #FFF;
 $color-graygreen: #6a7a4e;
 $color-grayred: #8d4e59;
+
+$color-blueborder: 3px solid #70c0e1;
+
+$todayBg: #23222e;
