--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -36,7 +36,7 @@
       min-width: 30px;
       margin: 3px 10px;
       font-size: 12px;
-      color: #5c5b6b;
+      color: $color-gray;
       text-align: center;
       line-height: 30px;
       position: relative;
@@ -53,16 +53,16 @@
         height: 30px;
         left: -3.5px;
         top: -3.5px;
-        border: 3px solid #70c0e1;
+        border: $color-blueborder;
         border-radius: 50%;
       }
     }
     > .month-class {
-      color: #a1a0ad;
+      color: $color-normal;
     }
 
     > .todayBg {
-      background: #23222e;
+      background: $todayBg;
       border-radius: 50%;
 
     }
