--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -13,6 +13,7 @@ $color-gray : #5c5b6b;
 $color-normal : #a1a0ad;
 $color-graygreen: #6a7a4e;
 $color-grayred: #8d4e59;
+$color-blueselected: #70c0e1;
 
 $color-blueborder: 3px solid #70c0e1;
 
