明细选项的图表完成

--- a/src/components/Statement/Swiper/SwiprIterm/Date/dateRecordList.scss
+++ b/src/components/Statement/Swiper/SwiprIterm/Date/dateRecordList.scss
@@ -6,6 +6,9 @@
     margin: 10px 0 10px 20px;
     color: #ffffff;
   }
+  .echarts {
+    height: 280px;
+  }
   .type {
     margin-top: 10px;
     font-size: 10px;
