--- a/src/components/Record/Calendar/Calendar.scss
+++ b/src/components/Record/Calendar/Calendar.scss
@@ -9,6 +9,14 @@
   > .title {
     font-size: 18px;
     text-align: center;
+    animation: rainbow 20s alternate infinite forwards;
+    @keyframes rainbow {
+      @for $i from 0 through 20 {
+        #{percentage($i * 0.05)} {
+          color: hsl(random(360%), 75, 75);
+        }
+      }
+    }
 
   }
 
